--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "eslint-plugin-react-refresh": "^0.3.4",
     "sass": "^1.63.6",
     "typescript": "^5.0.2",
-    "vite": "^4.3.9"
+    "vite": "^4.3.9",
+    "gh-pages": "^4.0.0"
+
   }
 }
